--- a/resume.tex
+++ b/resume.tex
@@ -133,7 +133,7 @@
 \item Write documentation for the team's codebase for new members
 \item Manage team's social media accounts
 \item Helped organize BuildIt First Tech Challenge workshop and parent open house to foster parent involvement
-\item Programmed the robot's autonomous and teleop code using Java. Used OpenCV to detect AprilTags.
+\item Programmed the robot's autonomous and teleop code using Java. Used OpenCV to detect AprilTags
 \item Reached Pennsylvania State Championship in 2023
 \end{itemize}
 
@@ -142,7 +142,7 @@
 \cvevent{Programming Club}{Co-president}{2021 --- Present}{}
 \begin{itemize}
 \item Teach Python and programming concepts to peak of 30 students
-\item Work on projects such as an AI that plays ultimate tic-tac-toe and a GeoGussr solver
+\item Work on projects such as an AI that plays ultimate tic-tac-toe and a GeoGuessr solver
 \end{itemize}
 
 \divider
@@ -211,7 +211,7 @@ Created social impact website using HTML/CSS/JS to spread awareness about at-ris
 
 \cvachievement{\faHeartbeat}{6:41 Mile PR}{After a year of running, I ran a sub-7 mile!}
 
-\cvsection{COLLEGE COURSES}
+\cvsection{College Courses}
 \textbf{University of Pennsylvania:} MATH 1410: Calulus III, MATH 1700: Ideas in Mathematics, MGMT004: Work, Balance, and Inequality, FNCE0002: Essentials of Personal Finance
 \smallskip
 
