--- a/resume.tex
+++ b/resume.tex
@@ -1,239 +1,216 @@
-%%%%%%%%%%%%%%%%%
-% This is an sample CV template created using altacv.cls
-% (v1.6.5, 3 Nov 2022) written by LianTze Lim (liantze@gmail.com). Compiles with pdfLaTeX, XeLaTeX and LuaLaTeX.
-%
-%% It may be distributed and/or modified under the
-%% conditions of the LaTeX Project Public License, either version 1.3
-%% of this license or (at your option) any later version.
-%% The latest version of this license is in
-%%    http://www.latex-project.org/lppl.txt
-%% and version 1.3 or later is part of all distributions of LaTeX
-%% version 2003/12/01 or later.
-%%%%%%%%%%%%%%%%
+%-------------------------
+% Resume in LaTeX
+% Author : Denny Cao
+% Based off of: https://github.com/jakegut/resume
+% License : MIT
+%------------------------
 
-%% Use the "normalphoto" option if you want a normal photo instead of cropped to a circle
-% \documentclass[10pt,a4paper,normalphoto]{altacv}
+\documentclass[letterpaper,11pt]{article}
 
-\documentclass[9pt,letterpaper,ragged2e,withhyper]{altacv}
-%% AltaCV uses the fontawesome5 and packages.
-%% See http://texdoc.net/pkg/fontawesome5 for full list of symbols.
-
-% Change the page layout if you need to
-\geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=.75cm}
-
-% The paracol package lets you typeset columns of text in parallel
-\usepackage{paracol}
-
-% Change the font if you want to, depending on whether
-% you're using pdflatex or xelatex/lualatex
-\ifxetexorluatex
-  % If using xelatex or lualatex:
-  \setmainfont{Roboto Slab}
-  \setsansfont{Lato}
-  \renewcommand{\familydefault}{\sfdefault}
-\else
-  % If using pdflatex:
-  \usepackage[rm]{roboto}
-  \usepackage[defaultsans]{lato}
-  % \usepackage{sourcesanspro}
-  \renewcommand{\familydefault}{\sfdefault}
-\fi
-
-% Change the colours if you want to
-\definecolor{SlateGrey}{HTML}{2E2E2E}
-\definecolor{LightGrey}{HTML}{666666}
-\definecolor{DarkPastelRed}{HTML}{450808}
-\definecolor{PastelRed}{HTML}{8F0D0D}
-\definecolor{GoldenEarth}{HTML}{E7D192}
-\definecolor{color1}{HTML}{40513B}
-\definecolor{color2}{HTML}{609966}
-\definecolor{color3}{HTML}{9DC08B}
-\definecolor{color4}{HTML}{EDF1D6}
-\colorlet{name}{black}
-\colorlet{tagline}{color1}
-\colorlet{heading}{color1}
-\colorlet{headingrule}{color3}
-\colorlet{subheading}{color2}
-\colorlet{accent}{color1}
-\colorlet{emphasis}{black}
-\colorlet{body}{black}
-
-% Change some fonts, if necessary
-\renewcommand{\namefont}{\Huge\rmfamily\bfseries}
-\renewcommand{\personalinfofont}{\small}
-\renewcommand{\cvsectionfont}{\LARGE\rmfamily\bfseries}
-\renewcommand{\cvsubsectionfont}{\large\bfseries}
+\usepackage{latexsym}
+\usepackage[empty]{fullpage}
+\usepackage{titlesec}
+\usepackage{marvosym}
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{verbatim}
+\usepackage{enumitem}
+\usepackage[hidelinks]{hyperref}
+\usepackage{fancyhdr}
+\usepackage[english]{babel}
+\usepackage{tabularx}
+\input{glyphtounicode}
 
 
-% Change the bullets for itemize and rating marker
-% for \cvskill if you want to
-\renewcommand{\itemmarker}{{\small\textbullet}}
-\renewcommand{\ratingmarker}{\faCircle}
+%----------FONT OPTIONS----------
+% sans-serif
+% \usepackage[sfdefault]{FiraSans}
+% \usepackage[sfdefault]{roboto}
+% \usepackage[sfdefault]{noto-sans}
+% \usepackage[default]{sourcesanspro}
 
-%% Use (and optionally edit if necessary) this .tex if you
-%% want to use an author-year reference style like APA(6)
-%% for your publication list
-% \input{pubs-authoryear}
+% serif
+% \usepackage{CormorantGaramond}
+% \usepackage{charter}
 
-%% Use (and optionally edit if necessary) this .tex if you
-%% want an originally numerical reference style like IEEE
-%% for your publication list
-\input{pubs-num}
 
-%% sample.bib contains your publications
-\addbibresource{sample.bib}
+\pagestyle{fancy}
+\fancyhf{} % clear all header and footer fields
+\fancyfoot{}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
 
-\begin{document}
-\name{DENNY CAO}
-\tagline{Senior at Julia R. Masterman High School}
-%% You can add multiple photos on the left or right
-\photoL{2.0cm}{profile}
-% \photoL{2.5cm}{Yacht_High,Suitcase_High}
+% Adjust margins
+\addtolength{\oddsidemargin}{-0.5in}
+\addtolength{\evensidemargin}{-0.5in}
+\addtolength{\textwidth}{1in}
+\addtolength{\topmargin}{-.5in}
+\addtolength{\textheight}{1.0in}
 
-\personalinfo{%
-  % Not all of these are required!
-  \email{dennycaopersonal@gmail.com}
-  \phone{(267) 269-3255}
-  \github{denny-cao}
-  %% You can add your own arbitrary detail with
-  %% \printinfo{symbol}{detail}[optional hyperlink prefix]
-  % \printinfo{\faPaw}{Hey ho!}[https://example.com/]
-  %% Or you can declare your own field with
-  %% \NewInfoFiled{fieldname}{symbol}[optional hyperlink prefix] and use it:
-  % \NewInfoField{gitlab}{\faGitlab}[https://gitlab.com/]
-  % \gitlab{your_id}
-  %%
-  %% For services and platforms like Mastodon where there isn't a
-  %% straightforward relation between the user ID/nickname and the hyperlink,
-  %% you can use \printinfo directly e.g.
-  % \printinfo{\faMastodon}{@username@instace}[https://instance.url/@username]
-  %% But if you absolutely want to create new dedicated info fields for
-  %% such platforms, then use \NewInfoField* with a star:
-  % \NewInfoField*{mastodon}{\faMastodon}
-  %% then you can use \mastodon, with TWO arguments where the 2nd argument is
-  %% the full hyperlink.
-  % \mastodon{@username@instance}{https://instance.url/@username}
+\urlstyle{same}
+
+\raggedbottom
+\raggedright
+\setlength{\tabcolsep}{0in}
+
+% Sections formatting
+\titleformat{\section}{
+  \vspace{-4pt}\scshape\raggedright\large
+}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
+
+% Ensure that generate pdf is machine readable/ATS parsable
+\pdfgentounicode=1
+
+%-------------------------
+% Custom commands
+\newcommand{\resumeItem}[1]{
+  \item\small{
+    {#1 \vspace{-2pt}}
+  }
 }
 
-\makecvheader
-%% Depending on your tastes, you may want to make fonts of itemize environments slightly smaller
-% \AtBeginEnvironment{itemize}{\small}
+\newcommand{\resumeSubheading}[4]{
+  \vspace{-2pt}\item
+    \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & #2 \\
+      \small#3 & \small #4   \\
+    \end{tabular*}\vspace{-7pt}
+}
 
-%% Set the left/right column width ratio to 6:4.
-\columnratio{0.55}
+\newcommand{\resumeSubSubheading}[2]{
+    \item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textit{\small#1} & \textit{\small #2} \\
+    \end{tabular*}\vspace{-7pt}
+}
 
-% Start a 2-column paracol. Both the left and right columns will automatically
-% break across pages if things get too long.
-\begin{paracol}{2}
-\cvsection{Extra-Curriculars}
+\newcommand{\resumeProjectHeading}[2]{
+    \item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \small#1 & #2 \\
+    \end{tabular*}\vspace{-7pt}
+}
 
-\cvevent{SLAM Robotics}{Marketing \& Fundraising Manager/Programming Lead}{2019 --- Present}{}
-\begin{itemize}
-\item Lead a team of 5 to rebrand team, making a new website, and creating a new logo.
-\item Write documentation for the team's codebase for new members
-\item Manage team's social media accounts
-\item Helped organize BuildIt First Tech Challenge workshop and parent open house to foster parent involvement
-\item Programmed the robot's autonomous and teleop code using Java. Used OpenCV to detect AprilTags
-\item Reached Pennsylvania State Championship in 2023
-\end{itemize}
+\newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
 
-\divider
+\renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
-\cvevent{Programming Club}{Co-president}{2021 --- Present}{}
-\begin{itemize}
-\item Teach Python and programming concepts to peak of 30 students
-\item Work on projects such as an AI that plays ultimate tic-tac-toe and a GeoGuessr solver
-\end{itemize}
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
-\divider
-
-\cvevent{TILT Teen Photo}{}{2021-Present}{}
-\begin{itemize}
-\item Learn about mediums of art including photography and printmaking
-\item Exhibit work at the TILT Institute for the Contemporary Image
-\end{itemize}
-
-\divider
-
-\cvevent{Tutoring}{}{2017-Present}{}
-\begin{itemize}
-\item Tutor for students at school from middle school to high school for NHS
-\item Instructor for Root2Success, an organization started at Masterman to bring advanced mathematics to underserved students throughout Philadelphia
-\item Tutor at-risk students online through UPchieve
-\item Assisted Mr. Tannen tutor algebra, precalculus, and calculus
-\end{itemize}
-
-\cvsection{Work Experience}
-
-\cvevent{Web Developer}{Philadelphia Trail Club}{2022-Present}{}
-\begin{itemize}
-    \item Renovating website to be more accessible for senior citizens
-    \item Using Salesforce to handle database
-\end{itemize}
-
-\divider
-
-\cvevent{Cashier/Waiter}{}{2020-2021}{}
-Worked at family restaurant and mother's nail salon part-time
+%-------------------------------------------
+%%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-%% Switch to the right column. This will now automatically move to the second
-%% page if the content is too long.
-\switchcolumn
+\begin{document}
 
-\cvsection{Summer Programs}
+%----------HEADING----------
+% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
+%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
+%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
+% \end{tabular*}
 
-\cvevent{GRASP Lab Internship}{University of Pennsylvania}{2022}{}
-Researched extrinsic contact estimation with graduate student in PAL Group and DAIR Lab
-
-\divider
-
-\cvevent{MITES Semester (MOSTEC)}{Massachusetts Institute of Technology}{2022}{}
-\begin{itemize}
-    \item Built robotic companion and guide dog for the blind using Bluetooth to sync with an Android phone that pushes GPS and goal coordinates
-    \item Wrote article about the future and implications of robotics, receiving Honorable Mention for Best of MOSTEC Science Writing
-\end{itemize}
-
-\divider
-
-\cvevent{CBK Summer}{WorkReady}{2021}{} 
-Created social impact website using HTML/CSS/JS to spread awareness about at-risk students
-
-\cvsection{Competitions}
-
-\cvachievement{\faTrophy}{2023 Wharton Investment Competition Semifinalist}{One of 55 out of nearly 1,400 teams competing in 53 countries}
-
-\divider
-
-\cvachievement{\faCalculator}{2023 MathWorks Math Modeling Challenge}{Created Vector Autoregression (VAR) model to predict future sales of e-bikes}
-
-\divider
-
-\cvachievement{\faHeartbeat}{6:41 Mile PR}{After a year of running, I ran a sub-7 mile!}
-
-\cvsection{College Courses}
-\textbf{University of Pennsylvania:} MATH 1410: Calulus III, MATH 1700: Ideas in Mathematics, MGMT004: Work, Balance, and Inequality, FNCE0002: Essentials of Personal Finance
-\smallskip
-
-\textbf{Community College of Philadelphia:} MATH 163: Discrete Mathematics 1, MATH 263: Discrete Mathematics 2
-
-\cvsection{Interests}
-
-\textbf{Sports:} Indoor \& Outdoor Track (2021 --- Present), JV Ultimate Frisbee (2019 --- 2021), Varsity Volleyball (2019 --- 2020)
-\smallskip
-
-\textbf{Music:} Piano, Orchestra (Violin II 2017 --- 2022)
-\smallskip
-
-\textbf{Hobbies:} Programming, Videography and Photography
-
-%% Supports X.5 values.
-
-%% Yeah I didn't spend too much time making all the
-%% spacing consistent... sorry. Use \smallskip, \medskip,
-%% \bigskip, \vspace etc to make adjustments.
-
-\end{paracol}
+\begin{center}
+    \textbf{\Huge \scshape Denny Cao} \\ \vspace{1pt}
+    \small 267-269-3255 $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} $|$ 
+    \href{https://github.com/denny-cao}{github.com/denny-cao}
+\end{center}
 
 
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Harvard University}{Cambridge, MA}
+      {Bachelor of Arts in Computer Science, Neuroscience, and Economics}{Aug. 2023 --- May 2027 (Projected)}
+    \resumeSubheading
+      {Julia R. Masterman High School}{Philadelphia, PA}
+      {High School Diploma}{Aug. 2019 --- June 2023}
+      \resumeItemListStart
+        \resumeItem{Relevant Coursework: MATH 163 and 263: Discrete Mathematics 1 and 2, MATH 1410: Multivariable Calculus, MATH 1700: Ideas in Mathematics, MGMT 0004: Work, Power and Inequality, FNCE 0002: Essentials of Personal Finance, AP Computer Science A, AP Physics C: Mechanics and Electricity \& Magnetism, AP Calculus BC}
+        \resumeItem{GPA: 3.9/4.0}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
+
+
+%-----------EXPERIENCE-----------
+\section{Experience}
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {Marketing \& Fundraising Manager/Programming Lead}{Sept. 2019 --- June 2023}
+      {SLAM Robotics}{Philadelphia, PA}
+      \resumeItemListStart
+        \resumeItem{Led team of 5 in rebranding the team, including designing a new website and creating a fresh logo}
+        \resumeItem{Wrote comprehensive documentation for team's codebase to facilitate onboarding of new members}
+        \resumeItem{Utilized Java and OpenCV to program robot's autonomous and teleop code, incorporating AprilTag detection}
+        \resumeItem{Reached FTC Pennsylvania State Championship in 2023}
+    \resumeItemListEnd
+      
+% -----------Multiple Positions Heading-----------
+%    \resumeSubSubheading
+%     {Software Engineer I}{Oct 2014 - Sep 2016}
+%     \resumeItemListStart
+%        \resumeItem{Apache Beam}
+%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
+%     \resumeItemListEnd
+%    \resumeSubHeadingListEnd
+%-------------------------------------------
+
+    \resumeSubheading
+      {Web Developer}{May 2022 --- Jan. 2023}
+      {Philadelphia Trail Club}{Philadelphia, PA}
+      \resumeItemListStart
+        \resumeItem{Revamped the website to improve accessibility for over 150 senior citizen members}
+        \resumeItem{Implemented Salesforce to manage membership and event registration, reducing workload of the club's treasurer}
+    \resumeItemListEnd
+
+    \resumeSubheading
+      {Robotics Research Assistant}{June 2022 --- August 2022}
+      {University of Pennsylvania}{Philadelphia, PA}
+      \resumeItemListStart
+        \resumeItem{Developed a Python script to generate heightmaps for environments in the Gazebo simulator, enabling the creation of diverse training data}
+        \resumeItem{Created realistic simulations of objects on a desk using procedural generation techniques, allowing for practical scenarios and real-world testing}
+        \resumeItem{Provided visualization tools in RViz that facilitated the understanding of the robot's current and target positions, aiding in error analysis and fine-tuning of robotic movements}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
+
+%-----------PROJECTS-----------
+\section{Projects}
+    \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{RoboDog} $|$ {C, Java, Arduino, CAD, KiCad}}{June 2022 --- Dec. 2022}
+          \resumeItemListStart
+            \resumeItem{Built a robot guide dog to assist the visually impaired}
+            \resumeItem{Implemented a communication system using Bluetooth to establish a connection between the robot and an Android phone, allowing for real-time exchange of GPS coordinates and goal information}
+            \resumeItem{CADed using OnShape to design the robot's chassis}
+            \resumeItem{Employed KiCad to map out schematics and for Arduino-based control systems}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Trash Collector} $|$ {Java, Python, TensorFlow, pandas, CAD, Git}}{May 2023}
+          \resumeItemListStart
+            \resumeItem{Collaborated with a team of 7 to develop a robot that can autonomously collect trash and sort it into recyclables and non-recyclables}
+            \resumeItem{Utilized TensorFlow to train an object detection model to detect trash and recyclables}
+            \resumeItem{Implemented a PID controller to control the robot's movements}
+            \resumeItem{Worked with team using Git for version control, enabling efficient and organized collaboration throughout the development process}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
+
+
+
+%
+%-----------PROGRAMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Python, Java, C/C++, SQL, JavaScript, HTML/CSS, LaTeX} \\
+     \textbf{Libraries}{: TensorFlow, OpenCV, pandas, NumPy, Matplotlib, PIL}
+    }}
+ \end{itemize}
+
+
+%-------------------------------------------
 \end{document}
