--- a/resume.tex
+++ b/resume.tex
@@ -113,7 +113,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Denny Cao} \\ \vspace{1pt}
-    \small 267-269-3255 $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} $|$ 
+    \small \href{tel:12672693255}{(267) 269-3255} $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} $|$ 
     \href{https://github.com/denny-cao}{github.com/denny-cao}
 \end{center}
 
@@ -140,12 +140,12 @@
 
     \resumeSubheading
       {Marketing \& Fundraising Manager/Programming Lead}{Sept. 2019 --- June 2023}
-      {SLAM Robotics}{Philadelphia, PA}
+      {SLAM Robotics Team}{Philadelphia, PA}
       \resumeItemListStart
         \resumeItem{Led team of 5 in rebranding the team, including designing a new website and creating a fresh logo}
         \resumeItem{Wrote comprehensive documentation for team's codebase to facilitate onboarding of new members}
         \resumeItem{Utilized Java and OpenCV to program robot's autonomous and teleop code, incorporating AprilTag detection}
-        \resumeItem{Reached FTC Pennsylvania State Championship in 2023}
+        \resumeItem{Reached Pennsylvania Championship in 2023}
     \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -158,16 +158,18 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
 
-    \resumeSubheading
-      {Web Developer}{May 2022 --- Jan. 2023}
-      {Philadelphia Trail Club}{Philadelphia, PA}
-      \resumeItemListStart
-        \resumeItem{Revamped the website to improve accessibility for over 150 senior citizen members}
-        \resumeItem{Implemented Salesforce to manage membership and event registration, reducing workload of the club's treasurer}
-    \resumeItemListEnd
+    % -----------Philadelphia Trail Club-----------
+    % \resumeSubheading
+    %   {Web Developer}{May 2022 --- Jan. 2023}
+    %   {Philadelphia Trail Club}{Philadelphia, PA}
+    %   \resumeItemListStart
+    %     \resumeItem{Revamped the website to improve accessibility for over 150 senior citizen members}
+    %     \resumeItem{Implemented Salesforce to manage membership and event registration, reducing workload of the club's treasurer}
+    % \resumeItemListEnd
+    %-------------------------------------------
 
     \resumeSubheading
-      {Robotics Research Assistant}{June 2022 --- August 2022}
+      {Robotics Research Assistant}{June 2022 --- Aug. 2022}
       {University of Pennsylvania}{Philadelphia, PA}
       \resumeItemListStart
         \resumeItem{Developed a Python script to generate heightmaps for environments in the Gazebo simulator, enabling the creation of diverse training data}
@@ -181,32 +183,41 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
+    \resumeProjectHeading
+    {\textbf{Trash Collector} $|$ {Java, Python, TensorFlow, pandas, CAD, Git}}{May 2023}
+    \resumeItemListStart
+      \resumeItem{Collaborated with a team of 7 to develop a robot that can autonomously collect trash and sort it into recyclables and non-recyclables}
+      \resumeItem{Utilized TensorFlow to train an object detection model to detect trash and recyclables}
+      \resumeItem{Implemented a PID controller to control the robot's movements}
+      \resumeItem{Worked with team using Git for version control, enabling efficient and organized collaboration}
+    \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{RoboDog} $|$ {C, Java, Arduino, CAD, KiCad}}{June 2022 --- Dec. 2022}
           \resumeItemListStart
-            \resumeItem{Built a robot guide dog to assist the visually impaired}
+            \resumeItem{Built a robot guide dog to assist visually impaired for MIT Online Science, Technology, and Engineering Community (MOSTEC) 2022 Capstone Project}
             \resumeItem{Implemented a communication system using Bluetooth to establish a connection between the robot and an Android phone, allowing for real-time exchange of GPS coordinates and goal information}
             \resumeItem{CADed using OnShape to design the robot's chassis}
             \resumeItem{Employed KiCad to map out schematics and for Arduino-based control systems}
           \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Trash Collector} $|$ {Java, Python, TensorFlow, pandas, CAD, Git}}{May 2023}
-          \resumeItemListStart
-            \resumeItem{Collaborated with a team of 7 to develop a robot that can autonomously collect trash and sort it into recyclables and non-recyclables}
-            \resumeItem{Utilized TensorFlow to train an object detection model to detect trash and recyclables}
-            \resumeItem{Implemented a PID controller to control the robot's movements}
-            \resumeItem{Worked with team using Git for version control, enabling efficient and organized collaboration throughout the development process}
-          \resumeItemListEnd
     \resumeSubHeadingListEnd
 
+%-----------ACHIEVEMENTS-----------
+\section{Awards and Accomplishments}
+    \begin{itemize}[leftmargin=0.15in]
+        \small{
+            \item{\textbf{2023 Wharton Global High School Investment Competition Semifinalist}{: Selected for as one of 55 teams out of rougly 1,400 teams competing in 53 countries}}
+            \item {\textbf{2023 MathWorks Math Modeling Challenge Second Round Qualifier}{: Top 25\% of submissions, creating a Vector Autoreggresion (VAR) model to predict future sales of e-bikes}}
+        }
+ \end{itemize}
 
 
-%
-%-----------PROGRAMMING SKILLS-----------
+
+%-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Python, Java, C/C++, SQL, JavaScript, HTML/CSS, LaTeX} \\
+     \textbf{Software}{: OnShape, Fusion360, KiCad, Arduino, Salesforce, Git, Linux, ROS, Gazebo, RViz} \\ 
      \textbf{Libraries}{: TensorFlow, OpenCV, pandas, NumPy, Matplotlib, PIL}
     }}
  \end{itemize}
