--- a/resume.tex
+++ b/resume.tex
@@ -31,6 +31,7 @@
 % serif
 % \usepackage{CormorantGaramond}
 % \usepackage{charter}
+% \usepackage{ebgaramond}
 
 
 \pagestyle{fancy}
@@ -123,12 +124,12 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Harvard University}{Cambridge, MA}
-      {Bachelor of Arts in Computer Science, Neuroscience, and Economics}{Aug. 2023 --- May 2027 (Projected)}
+      {Bachelor of Arts in Computer Science, Neuroscience, and Economics}{Anticipated May 2027}
     \resumeSubheading
       {Julia R. Masterman High School}{Philadelphia, PA}
-      {High School Diploma}{Aug. 2019 --- June 2023}
+      {High School Diploma}{June 2023}
       \resumeItemListStart
-        \resumeItem{Relevant Coursework: MATH 163 and 263: Discrete Mathematics 1 and 2, MATH 1410: Multivariable Calculus, MATH 1700: Ideas in Mathematics, MGMT 0004: Work, Power and Inequality, FNCE 0002: Essentials of Personal Finance, AP Computer Science A, AP Physics C: Mechanics and Electricity \& Magnetism, AP Calculus BC}
+        \resumeItem{Relevant Coursework: Discrete Mathematics 1 and 2, Multivariable Calculus, Ideas in Mathematics, AP Computer Science A, AP Physics C: Mechanics and Electricity \& Magnetism, AP Calculus BC}
         \resumeItem{GPA: 3.9/4.0}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -170,8 +171,9 @@
 
     \resumeSubheading
       {Robotics Research Assistant}{June 2022 --- Aug. 2022}
-      {University of Pennsylvania}{Philadelphia, PA}
+      {GRASP Lab @ University of Pennsylvania}{Philadelphia, PA}
       \resumeItemListStart
+        \resumeItem{Researched extrinsic contact estimation for robotic manipulation to advance the field of general-purpose robotics}
         \resumeItem{Developed a Python script to generate heightmaps for environments in the Gazebo simulator, enabling the creation of diverse training data}
         \resumeItem{Created realistic simulations of objects on a desk using procedural generation techniques, allowing for practical scenarios and real-world testing}
         \resumeItem{Provided visualization tools in RViz that facilitated the understanding of the robot's current and target positions, aiding in error analysis and fine-tuning of robotic movements}
@@ -202,10 +204,10 @@
     \resumeSubHeadingListEnd
 
 %-----------ACHIEVEMENTS-----------
-\section{Awards and Accomplishments}
+\section{Awards and Honors}
     \begin{itemize}[leftmargin=0.15in]
         \small{
-            \item{\textbf{2023 Wharton Global High School Investment Competition Semifinalist}{: Selected for as one of 55 teams out of rougly 1,400 teams competing in 53 countries}}
+            \item{\textbf{2023 Wharton Global High School Investment Competition Semifinalist}{: Selected for as one of 55 teams out of rougly 1,400 teams competing in 53 countries, creating a unique investment strategy and portfolio for a fictitious client}}
             \item {\textbf{2023 MathWorks Math Modeling Challenge Second Round Qualifier}{: Top 25\% of submissions, creating a Vector Autoreggresion (VAR) model to predict future sales of e-bikes}}
         }
  \end{itemize}
@@ -216,8 +218,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, Java, C/C++, SQL, JavaScript, HTML/CSS, LaTeX} \\
-     \textbf{Software}{: OnShape, Fusion360, KiCad, Arduino, Salesforce, Git, Linux, ROS, Gazebo, RViz} \\ 
+     \textbf{Programming Languages}{: Python, Java, C/C++, SQL, JavaScript, HTML/CSS, LaTeX} \\
+     \textbf{Software Tools}{: OnShape, Fusion360, KiCad, Arduino, Salesforce, Git, Linux, ROS} \\ 
      \textbf{Libraries}{: TensorFlow, OpenCV, pandas, NumPy, Matplotlib, PIL}
     }}
  \end{itemize}
