--- a/censor.tex
+++ b/censor.tex
@@ -112,11 +112,10 @@
 % \end{tabular*}
 
 \begin{center}
-  \textbf{\Huge \scshape Denny Cao} \\ \vspace{1pt}
-  \small \href{tel:12672693255}{(267) 269-3255} $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} 
-$|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$     \href{https://github.com/denny-cao}{github.com/denny-cao}
+    \textbf{\Huge \scshape John Doe} \\ \vspace{1pt}
+    \small \href{tel:12672693255}{(123) 345-67890} $|$ \href{mailto:dennycao@college.harvard.edu}{johndoe@college.harvard.edu} 
+ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/john-doe} $|$     \href{https://github.com/denny-cao}{github.com/john-doe}
 \end{center}
-
 
 %-----------EDUCATION-----------
 \section{Education}
@@ -125,10 +124,10 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
       {Harvard University}{Anticipated May 2027}
       {\textit{Bachelor of Arts in Computer Science, Neuroscience, and Economics}}{\textit{Cambridge, MA}}
     \resumeSubheading
-      {Julia R. Masterman High School}{June 2023}
+      {X High School}{June 2023}
       {\textit{High School Diploma -- GPA: 3.9/4.0}}{\textit{Philadelphia, PA}}
       \resumeItemListStart
-        \resumeItem{Relevant Coursework: Discrete Mathematics at Community College of Philadelphia, Multivariable Calculus at University of Pennsylvania, AP Computer Science A, AP Calculus BC}
+        \resumeItem{Relevant Coursework: Discrete Mathematics at Community College of Philadelphia, Multivariable Calculus at University of Pennsylvania, AP Computer Science A}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -159,7 +158,7 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
 
     \resumeSubheading
       {Programming Lead/Marketing \& Fundraising Manager}{Sept. 2019 --- June 2023}
-      {\textit{SLAM Robotics Team}}{\textit{Philadelphia, PA}}
+      {\textit{School Robotics Team}}{\textit{Philadelphia, PA}}
       \resumeItemListStart
         \resumeItem{Developed comprehensive documentation for team's codebase using GitBook to streamline the onboarding process for new team members}
         \resumeItem{Utilized Java and OpenCV to program robot's autonomous and teleop code, incorporating AprilTag detection}
@@ -199,26 +198,27 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
 
   \resumeSubHeadingListEnd
 
-  %-----------PROJECTS-----------
+
+%-----------PROJECTS-----------
 \section{Projects}
-\resumeSubHeadingListStart
-\resumeProjectHeading
-{\textbf{Trash Collector} $|$ {\textit{Java $\cdot$ Python $\cdot$ TensorFlow $\cdot$ pandas $\cdot$ CAD $\cdot$ Git}}}{May 2023}
-\resumeItemListStart
-  \resumeItem{Developed a robot that can autonomously collect trash and sort it into recyclables and non-recyclables}
-  \resumeItem{Utilized TensorFlow to train an object detection model to detect trash and recyclables}
-  \resumeItem{Implemented a PID controller to control robot's movements}
-  \resumeItem{Worked with a team of 7 using Git for version control, enabling efficient and organized collaboration}
-\resumeItemListEnd
-  \resumeProjectHeading
-      {\textbf{RoboDog} $|$ {\textit{C $\cdot$ Java $\cdot$ Arduino $\cdot$ CAD $\cdot$ KiCad}}}{June 2022 --- Dec. 2022}
-      \resumeItemListStart
-        \resumeItem{Built a robot guide dog to assist visually impaired for MIT Online Science, Technology, and Engineering Community (MOSTEC) 2022 Capstone Project}
-        \resumeItem{Implemented a communication system using Bluetooth to establish a connection between robot and an Android phone, allowing for real-time exchange of GPS coordinates and goal information}
-        \resumeItem{CADed using OnShape to design robot's chassis}
-        \resumeItem{Employed KiCad to map out schematics and for Arduino-based control systems}
-      \resumeItemListEnd
-\resumeSubHeadingListEnd
+    \resumeSubHeadingListStart
+    \resumeProjectHeading
+    {\textbf{Trash Collector} $|$ {\textit{Java $\cdot$ Python $\cdot$ TensorFlow $\cdot$ pandas $\cdot$ CAD $\cdot$ Git}}}{May 2023}
+    \resumeItemListStart
+      \resumeItem{Developed a robot that can autonomously collect trash and sort it into recyclables and non-recyclables}
+      \resumeItem{Utilized TensorFlow to train an object detection model to detect trash and recyclables}
+      \resumeItem{Implemented a PID controller to control robot's movements}
+      \resumeItem{Worked with a team of 7 using Git for version control, enabling efficient and organized collaboration}
+    \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{RoboDog} $|$ {\textit{C $\cdot$ Java $\cdot$ Arduino $\cdot$ CAD $\cdot$ KiCad}}}{June 2022 --- Dec. 2022}
+          \resumeItemListStart
+            \resumeItem{Built a robot guide dog to assist visually impaired for MIT Online Science, Technology, and Engineering Community (MOSTEC) 2022 Capstone Project}
+            \resumeItem{Implemented a communication system using Bluetooth to establish a connection between robot and an Android phone, allowing for real-time exchange of GPS coordinates and goal information}
+            \resumeItem{CADed using OnShape to design robot's chassis}
+            \resumeItem{Employed KiCad to map out schematics and for Arduino-based control systems}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
 
 %-----------ACHIEVEMENTS-----------
 \section{Awards and Honors}
