--- a/leftalign.tex
+++ b/leftalign.tex
@@ -111,11 +111,11 @@
 %   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
 % \end{tabular*}
 
-\begin{center}
-  \textbf{\Huge \scshape Denny Cao} \\ \vspace{1pt}
-  \small \href{tel:12672693255}{(267) 269-3255} $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} 
-$|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$     \href{https://github.com/denny-cao}{github.com/denny-cao}
-\end{center}
+
+\textbf{\Huge \scshape Denny Cao} \\ \vspace{1pt}
+\small 2122 Tyson Ave Philadelphia, PA 19149 $|$ \href{tel:12672693255}{(267) 269-3255} $|$ \href{mailto:dennycao@college.harvard.edu}{dennycao@college.harvard.edu} 
+
+\href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$     \href{https://github.com/denny-cao}{github.com/denny-cao}
 
 
 %-----------EDUCATION-----------
