Update concentration, add more dev tools, add more detail to relevant coursework in hs

--- a/resume.tex
+++ b/resume.tex
@@ -123,12 +123,12 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
   \resumeSubHeadingListStart
     \resumeSubheading
       {Harvard University}{Anticipated May 2027}
-      {\textit{Bachelor of Arts in Computer Science, Neuroscience, and Economics}}{\textit{Cambridge, MA}}
+      {\textit{Bachelor of Arts in Computer Science and Statistics with Quantitative Finance Track}}{\textit{Cambridge, MA}}
     \resumeSubheading
       {Julia R. Masterman High School}{June 2023}
       {\textit{High School Diploma -- GPA: 3.9/4.0}}{\textit{Philadelphia, PA}}
       \resumeItemListStart
-        \resumeItem{Relevant Coursework: Discrete Mathematics at Community College of Philadelphia, Multivariable Calculus at University of Pennsylvania, AP Computer Science A, AP Calculus BC}
+        \resumeItem{Relevant Coursework: MATH 163 and 263: Discrete Mathematics 1 and 2 at Community College of Philadelphia, MATH 1410: Multivariable Calculus at University of Pennsylvania, AP CS A, AP Calculus BC, AP Physics C}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -147,7 +147,7 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
 \begin{itemize}[leftmargin=0.15in, label={}]
   \small{\item{
    \textbf{Programming}{: Python $\cdot$ Java $\cdot$ C/C++ $\cdot$ ROS $\cdot$ SQL $\cdot$ JavaScript $\cdot$ HTML/CSS $\cdot$ \LaTeX} \\
-   \textbf{Software Tools}{: OnShape $\cdot$ Fusion360 $\cdot$ KiCad $\cdot$ Git $\cdot$ Linux $\cdot$ Adobe Suite} \\ 
+   \textbf{Tools}{: Git $\cdot$ Linux $\cdot$ Jira $\cdot$ Vim $\cdot$ OnShape $\cdot$ Fusion360 $\cdot$ KiCad $\cdot$ Adobe Suite} $\cdot$ MS Office \\ 
    \textbf{Libraries}{: TensorFlow $\cdot$ OpenCV $\cdot$ pandas $\cdot$ NumPy $\cdot$ Matplotlib $\cdot$ PIL}
   }} \\
   \textbf{Languages}{: English (Native) $\cdot$ Fuzhounese (Native) $\cdot$ French (Conversational) $\cdot$ Mandarin Chinese (Beginner)}
@@ -191,13 +191,15 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
       {Robotics Research Assistant}{June 2022 --- Aug. 2022}
       {\textit{GRASP Lab at University of Pennsylvania}}{\textit{Philadelphia, PA}}
       \resumeItemListStart
-        \resumeItem{Researched extrinsic contact estimation for robotic manipulation to advance the field of general-purpose robotics}
-        \resumeItem{Developed a Python script to generate heightmaps for environments in Gazebo simulator, enabling creation of diverse training data}
-        \resumeItem{Created realistic simulations of objects on a desk using procedural generation techniques, allowing for practical scenarios and real-world testing}
-        \resumeItem{Provided visualization tools in RViz that facilitated understanding of robot's current and target positions, aiding in error analysis and fine-tuning of robotic movements}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
+        \resumeItem{Researched extrinsic contact estimation for robotic manipulation to advance the field of general-purpose
+      robotics}
+        \resumeItem{Developed a Python script to generate heightmaps for environments in Gazebo simulator, enabling creation
+      of diverse training data}
+        \resumeItem{Programmatically generated URDFs of objects on a desk using procedural generation techniques, allowing for
+      practical scenarios and real-world testing}
+        \resumeItem{Provided visualization tools in RViz that facilitated understanding of Franka Panda current and target positions, aiding in error analysis and fine-tuning of robotic movements}
+      \resumeItemListEnd  
+    \resumeSubHeadingListEnd
 
   %-----------PROJECTS-----------
 \section{Projects}
@@ -224,7 +226,7 @@ $|$ \href{https://www.linkedin.com/in/denny-cao/}{linkedin.com/in/denny-cao} $|$
 \section{Awards and Honors}
     \begin{itemize}[leftmargin=0.15in, label={}]
         \small{
-            \item{\textbf{2023 Wharton Global High School Investment Competition Semifinalist}{: Selected as one of 55 teams out of rougly 1,400 teams competing in 53 countries for creating a unique investment strategy and portfolio for a fictitious client}}
+            \item{\textbf{2023 Wharton Global High School Investment Competition Semifinalist}{: Selected as one of 55 teams out of roughly 1,400 competing from 53 countries for creating a unique investment strategy and portfolio for a fictitious client}}
             \item{\textbf{2023 MathWorks Math Modeling Challenge Second Round Qualifier}{: Top 25\% of submissions, implementing a Vector Autoreggresion (VAR) model to predict future sales of e-bikes}}
         }
  \end{itemize}
